--- a/app/Resources/views/editForm.html.twig
+++ b/app/Resources/views/editForm.html.twig
@@ -87,6 +87,13 @@
                                     </button>
                                 </div>
                             </div>
+                            <div class="row" id="General">
+                                <div class="col-md-12">
+                                    {% block general %}
+                                        {% include 'generalForm.twig' %}
+                                    {% endblock %}
+                                </div>
+                            </div>
                             <div class="row" id="Medical">
                                 <div class="col-md-12">
                                     {% block medical %}
@@ -94,6 +101,20 @@
                                     {% endblock %}
                                 </div>
                             </div>
+                            <div class="row" id="Security">
+                                <div class="col-md-12">
+                                    {% block security %}
+                                        {% include 'securityForm.twig' %}
+                                    {% endblock %}
+                                </div>
+                            </div>
+                            <div class="row" id="Lost Property">
+                                <div class="col-md-12">
+                                    {% block lostProperty %}
+                                        {% include 'lostPropertyForm.twig' %}
+                                    {% endblock %}
+                                </div>
+                            </div>                                
                     </div>
                 </div>
             </div>
