--- a/app/Resources/views/editForm.html.twig
+++ b/app/Resources/views/editForm.html.twig
@@ -63,26 +63,29 @@
                                     </div>
                                 </div>
                             </div>
-                            {{ form_widget(log_entry.submit) }} <br>
-                            {{ form_end(log_entry) }}
+                            <div id="submit_button"
+                                {{ form_widget(log_entry.submit) }} <br>
+                                {{ form_end(log_entry) }}
+                            </div>
+                            <br>
                             <div class="row">
                                 <div class="col-md-3">  
-                                    <button type="button" class="btn btn-info btn-block">
+                                    <button type="button" id="general_button" class="btn btn-info btn-block">
                                         General
                                     </button>
                                 </div>
                                 <div class="col-md-3">  
-                                    <button type="button" class="btn btn-info btn-block">
+                                    <button type="button" id="medical_button" class="btn btn-info btn-block">
                                         Medical
                                     </button>
                                 </div>
                                 <div class="col-md-3">
-                                    <button type="button" class="btn btn-info btn-block">
+                                    <button type="button" id="security_button" class="btn btn-info btn-block">
                                         Security
                                     </button>
                                 </div>
                                 <div class="col-md-3">
-                                    <button type="button" class="btn btn-info btn-block">
+                                    <button type="button" id="lost_button" class="btn btn-info btn-block">
                                         Lost Property
                                     </button>
                                 </div>
@@ -108,7 +111,7 @@
                                     {% endblock %}
                                 </div>
                             </div>
-                            <div class="row" id="Lost Property">
+                            <div class="row" id="Lost">
                                 <div class="col-md-12">
                                     {% block lostProperty %}
                                         {% include 'lostPropertyForm.twig' %}
@@ -126,6 +129,12 @@
 {% endblock %}
 {% block scripts %}
     <script type="text/javascript">
+        $(document).ready(function() {
+            $('#General').hide();
+            $('#Medical').hide();
+            $('#Security').hide();
+            $('#Lost').hide();
+        });
         $(function () {
             $('#datetimepicker1').datetimepicker({
                 useCurrent: true,
@@ -133,5 +142,49 @@
                 showTodayButton: true
             });
         });
+        $('#general_button').click(function(){
+            $('#General').show(200);
+            $('#Medical').hide(100);
+            $('#Security').hide(100);
+            $('#Lost').hide(100);
+            $('#submit_button').hide();
+        });
+        $('#medical_button').click(function(){
+            $('#Medical').show(200);
+            $('#General').hide(100);
+            $('#Security').hide(100);
+            $('#Lost').hide(100);
+            $('#submit_button').hide();
+        });
+        $('#security_button').click(function(){
+            $('#Security').show(200);
+            $('#Medical').hide(100);
+            $('#General').hide(100);
+            $('#Lost').hide(100);
+            $('#submit_button').hide();
+        });
+        $('#lost_button').click(function(){
+            $('#Lost').show(500);
+            $('#Medical').hide(250);
+            $('#Security').hide(250);
+            $('#General').hide(250);
+            $('#submit_button').hide();
+        });
+        $('#general_close_button').click(function(){
+            $('#General').hide(100);
+            $('#submit_button').show();
+        }); 
+        $('#security_close_button').click(function(){
+            $('#Security').hide(100);
+            $('#submit_button').show();
+        }); 
+        $('#medical_close_button').click(function(){
+            $('#Medical').hide(100);
+            $('#submit_button').show();
+        }); 
+        $('#lost_close_button').click(function(){
+            $('#Lost').hide(100);
+            $('#submit_button').show();
+        });         
     </script>        
 {% endblock %}
