Added logout functionality and disabled changing of operator field in log entries.

--- a/app/Resources/views/register.html.twig
+++ b/app/Resources/views/register.html.twig
@@ -13,8 +13,11 @@
                 {{ form_row(form.plainPassword.first) }}
                 {{ form_row(form.plainPassword.second) }}
 
-                <button type="submit">Register!</button>
+                <button type="submit">Register Operator</button>
             {{ form_end(form) }}
+        {% endblock %}
+        {% block sidebar %}
+            {% include 'sidebar.twig' %}
         {% endblock %}
     {% endembed %}
 {% endblock %}              
