--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -36,7 +36,7 @@
             </div>
         </div>
     </a>
-    <a href="/web/index.php/log/desc/all/lost/" class="btn btn-default btn-block" role="button">
+    <a href="/index.php/log/desc/all/lost/" class="btn btn-default btn-block" role="button">
         <div class="row">
             <div class="col-md-12 col-xs-12">
                 Latest Lost Property View
@@ -49,12 +49,12 @@
     <div class="row">
             <h4>Operator Functions</h4>
     </div>
-    <a href="#" class="btn btn-default btn-block" role="button">
+    <a href="/index.php/register" class="btn btn-default btn-block" role="button">
         <div class="row">
-            Operator Login
+            Operator Registration
         </div>
     </a>
-    <a href="#" class="btn btn-default btn-block" role="button">
+    <a href="/index.php/logout" class="btn btn-default btn-block" role="button">
         <div class="row">
             Operator Logout
         </div>
