Added styling to login and register pages

--- a/app/Resources/views/editForm.html.twig
+++ b/app/Resources/views/editForm.html.twig
@@ -63,7 +63,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div id="submit_button"
+                            <div id="submit_button">
                                 {{ form_widget(log_entry.submit) }} <br>
                                 {{ form_end(log_entry) }}
                             </div>
