--- a/app/Resources/views/login.html.twig
+++ b/app/Resources/views/login.html.twig
@@ -7,25 +7,47 @@
 {% block layout %}
     {% embed '3-9.html.twig' %}
         {% block content %}
-            {% if error %}
-                <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-            {% endif %}
-
-            <form action="{{ path('login') }}" method="post">
-                <label for="username">Username:</label>
-                <input type="text" id="username" name="_username" value="{{ last_username }}" />
-
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="_password" />
-
+            <div class="wrapper">
+                <div class="row">
+                    <div class="col-md-12">
+                        {% if error %}
+                            <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+                        {% endif %}
+                    </div>
+                </div>
+                <form action="{{ path('login') }}" method="post">    
+                <div class="row">
+                    <div class="form-group">
+                        <div class="col-md-1">               
+                            <label for="username">Username:</label>
+                        </div>
+                        <div class="col-md-2">                             
+                            <input type="text" id="username" name="_username" value="{{ last_username }}" />
+                        </div>
+                    </div>
+                </div><br>
+                <div class="row">
+                    <div class="form-group">
+                        <div class="col-md-1">                          
+                            <label for="password">Password:</label>
+                        </div>
+                        <div class="col-md-2">                 
+                            <input type="password" id="password" name="_password" />
+                        </div>
+                    </div>
+                </div><br>
                 {#
                     If you want to control the URL the user
                     is redirected to on success (more details below)
                     <input type="hidden" name="_target_path" value="/account" />
                 #}
-
-                <button type="submit">login</button>
+                <div class="row">  
+                    <div class="col-md-3"> 
+                        <button class="btn btn-primary btn-block" type="submit">login</button>
+                    </div>
+                </div>
             </form>
+        </div>
         {% endblock %}
     {% endembed %}
 {% endblock %}                
