--- a/app/Resources/views/log.html.twig
+++ b/app/Resources/views/log.html.twig
@@ -30,7 +30,7 @@
                                     </tr>
                                     {% for log in logs %}
                                         <tr>
-                                            <td>{{ log.log_entry_open_time|date('Y-m-d H:i:s') }}</td>
+                                            <td>{{ log.log_entry_open_time|date('Y-m-d H:i:s', "Europe/London") }}</td>
                                             <td><a href="/index.php/entry/{{log.id}}">{{ log.log_blurb }}</a></td>
                                             <td>{{ log.location }}</td>
                                             <td>{{ log.reported_by }}</td>
