Added closed entry times

--- a/app/Resources/views/generalForm.twig
+++ b/app/Resources/views/generalForm.twig
@@ -24,7 +24,7 @@
     <div class="col-md-2">
         <br>
         <button type="button" id="general_close_button" class="btn btn-warning btn-block">
-            Close General
+            Hide General
         </button>
     </div>        
 </div>
