--- a/app/Resources/views/lostPropertyForm.twig
+++ b/app/Resources/views/lostPropertyForm.twig
@@ -65,7 +65,7 @@
     <div class="col-md-2">
         <br>
         <button type="button" id="lost_close_button" class="btn btn-warning btn-block">
-            Close Lost Property
+            Hide Lost Property
         </button>
     </div>        
 </div>
