--- a/app/Resources/views/medicalForm.twig
+++ b/app/Resources/views/medicalForm.twig
@@ -78,7 +78,7 @@
     <div class="col-md-2">
         <br>
         <button type="button" id="medical_close_button" class="btn btn-warning btn-block">
-            Close Medical
+            Hide Medical
         </button>
     </div>
 </div>
