--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -58,18 +58,13 @@
         <div class="row">
             Operator Logout
         </div>
-    <a href="#" class="btn btn-default btn-block" role="button">
+    <a href="/index.php/signin" class="btn btn-default btn-block" role="button">
         <div class="row">
-            Control Room Sign-in
+            Event Control Register Sign-in
         </div>
     </a>
-    <a href="#" class="btn btn-default btn-block" role="button">
+    <a href="/index.php/fireregister" class="btn btn-default btn-block" role="button">
         <div class="row">
-            Control Room Sign-out
-        </div>
-    </a>
-    <a href="#" class="btn btn-default btn-block" role="button">
-        <div class="row">
-            Control Room Register
+            Event Control Register
         </div>
     </a>
