--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -1,42 +1,42 @@
 <div class="row">
     <h4>Log Functions</h4>
 </div>
-    <a href="/index.php/entry/" class="btn btn-primary btn-block" role="button">
+    <a href="{{ path('new_entry') }}" class="btn btn-primary btn-block" role="button">
         <div class="row">
             <div class="col-md-12 col-xs-12">
                 <strong>Log Entry</strong>
             </div>
         </div>
     </a>
-    <a href="/index.php/log/" class="btn btn-default btn-block" role="button">
+    <a href="{{ path('full_log') }}" class="btn btn-default btn-block" role="button">
         <div class="row">
             <div class="col-md-12 col-xs-12">
                 Full Log View
             </div>
         </div>
     </a>
-    <a href="/index.php/log/desc/open/" class="btn btn-default btn-block" role="button">
+    <a href="/log/desc/open/" class="btn btn-default btn-block" role="button">
         <div class="row">
             <div class="col-md-12 col-xs-12">
                 Latest Open Entries View
             </div>
         </div>
     </a>
-    <a href="/index.php/log/desc/all/medical/" class="btn btn-default btn-block" role="button">
+    <a href="/log/desc/all/medical/" class="btn btn-default btn-block" role="button">
         <div class="row">
             <div class="col-md-12 col-xs-12">
                 Latest Medical Entries View
             </div>
         </div>
     </a>
-    <a href="/index.php/log/desc/all/security/" class="btn btn-default btn-block" role="button">
+    <a href="/log/desc/all/security/" class="btn btn-default btn-block" role="button">
         <div class="row">
             <div class="col-md-12 col-xs-12">
                 Latest Security Entries View
             </div>
         </div>
     </a>
-    <a href="/index.php/log/desc/all/lost/" class="btn btn-default btn-block" role="button">
+    <a href="/log/desc/all/lost/" class="btn btn-default btn-block" role="button">
         <div class="row">
             <div class="col-md-12 col-xs-12">
                 Latest Lost Property View
@@ -49,21 +49,21 @@
     <div class="row">
             <h4>Operator Functions</h4>
     </div>
-    <a href="/index.php/register" class="btn btn-default btn-block" role="button">
+    <a href="{{ path('user_registration') }}" class="btn btn-default btn-block" role="button">
         <div class="row">
             Operator Registration
         </div>
     </a>
-    <a href="/index.php/logout" class="btn btn-default btn-block" role="button">
+    <a href="{{ path('logout') }}" class="btn btn-default btn-block" role="button">
         <div class="row">
             Operator Logout
         </div>
-    <a href="/index.php/signin" class="btn btn-default btn-block" role="button">
+    <a href="{{ path('signin') }}" class="btn btn-default btn-block" role="button">
         <div class="row">
             Event Control Register Sign-in
         </div>
     </a>
-    <a href="/index.php/fireregister" class="btn btn-default btn-block" role="button">
+    <a href="{{ path('fire_register') }}" class="btn btn-default btn-block" role="button">
         <div class="row">
             Event Control Register
         </div>
