--- a/app/Resources/views/generalForm.twig
+++ b/app/Resources/views/generalForm.twig
@@ -23,6 +23,15 @@
         </div>
     </div>
 </div>
+{% if generalClosed is not null %}
+    <div class="row">
+        <div class="col-md-12">
+            <div class="alert alert-info" role="alert">
+                <strong>Incident Closed: </strong>{{ generalClosed|date('Y-m-d H:i:s', "Europe/London") }}
+            </div>
+        </div>
+    </div>
+{% endif %}
 <div class="row">
     <div class="col-md-10">
         <br>
