--- a/app/Resources/views/lostPropertyForm.twig
+++ b/app/Resources/views/lostPropertyForm.twig
@@ -55,6 +55,15 @@
         </div>
     </div>
 </div>
+{% if lostClosed is not null %}
+    <div class="row">        
+        <div class="col-md-4">
+            <div class="alert alert-info" role="alert">
+                <strong>Incident Closed: </strong>{{ lostClosed|date('Y-m-d H:i:s', "Europe/London") }}
+            </div>
+        </div>
+    </div>
+{% endif %}    
 <div class="row">
     <div class="col-md-10">
         <br>
