--- a/app/Resources/views/log.html.twig
+++ b/app/Resources/views/log.html.twig
@@ -16,18 +16,20 @@
                         {% if logs is empty %}
                             No logs available
                         {% else %}
-                            <table class="table table-striped">
-                                <tbody>
+                            <table class="table table-sm table-striped table-bordered table-hover">
+                                <thead>
                                     <tr>
-                                        <td><strong>Log Time</strong></td>
-                                        <td><strong>Log Title</strong></td>
-                                        <td><strong>Location</strong></td>
-                                        <td><strong>Reported By</strong></td>
-                                        <td><strong>General</strong></td>
-                                        <td><strong>Medical</strong></td>
-                                        <td><strong>Security</strong></td>
-                                        <td><strong>Lost Property</strong></td>
+                                        <th>Log Time</th>
+                                        <th>Log Title</th>
+                                        <th>Location</th>
+                                        <th>Reported By</td>
+                                        <th>General</td>
+                                        <th>Medical</td>
+                                        <th>Security</td>
+                                        <th>Lost Property</td>
                                     </tr>
+                                </thead>
+                                <tbody>
                                     {% for log in logs %}
                                         <tr>
                                             <td>{{ log.log_entry_open_time|date('Y-m-d H:i:s', "Europe/London") }}</td>
@@ -35,35 +37,47 @@
                                             <td>{{ log.location }}</td>
                                             <td>{{ log.reported_by }}</td>
                                             <td>
+                                            {% if log.general_entry_closed_time is not null %}
+                                                <div data-toggle="tooltip" data-placement="left" title="{{ log.general_entry_closed_time|date('Y-m-d H:i:s', "Europe/London") }}">
+                                            {% endif %}
                                                 {% if log.general_description is null %}
                                                     <br>
                                                 {% else %}
                                                     {{ log.general_description[:12]|striptags ~ ' ...'  }}
                                                     <br>
                                                     {% if log.general_entry_closed_time is not null %}
-                                                        {{ log.general_entry_closed_time|date('Y-m-d H:i:s', "Europe/London") }}
+                                                        Closed
+                                                    </div>
                                                     {% endif %}
                                                 {% endif %}
                                             </td>
                                             <td {% if log.medical_entry_closed_time is null %} class="severity{{ log.medical_severity }}" {% endif %}>
+                                            {% if log.medical_entry_closed_time is not null %}
+                                                <div data-toggle="tooltip" data-placement="left" title="{{ log.medical_entry_closed_time|date('Y-m-d H:i:s', "Europe/London") }}">
+                                            {% endif %}
                                                 {% if log.medical_injury_description is null %}
                                                     <br>
                                                 {% else %}
                                                     {{ log.medical_injury_description }}
                                                         <br> 
                                                     {% if log.medical_entry_closed_time is not null %}
-                                                        {{ log.medical_entry_closed_time|date('Y-m-d H:i:s', "Europe/London") }}
+                                                        Closed
+                                                    </div>
                                                     {% endif %}
                                                 {% endif %}
                                             </td>
                                             <td {% if log.security_entry_closed_time is null %} class="severity{{ log.severity }}" {% endif %}>
+                                            {% if log.security_entry_closed_time is not null %}
+                                                <div data-toggle="tooltip" data-placement="left" title="{{ log.security_entry_closed_time|date('Y-m-d H:i:s', "Europe/London") }}">
+                                            {% endif %}
                                                 {% if log.security_description is null %}
                                                     <br>
                                                 {% else %}
                                                     {{ log.security_incident_description }}
                                                     <br> 
                                                     {% if log.security_entry_closed_time is not null %}
-                                                        {{ log.security_entry_closed_time|date('Y-m-d H:i:s', "Europe/London") }}
+                                                        Closed
+                                                    </div>
                                                     {% endif %}
                                                 {% endif %}
                                             </td> 
@@ -71,10 +85,14 @@
                                                 {% if log.lost_property_description is null %}
                                                     <br>
                                                 {% else %}
+                                                    {% if log.lost_property_entry_closed_time is not null %}
+                                                        <div data-toggle="tooltip" data-placement="left" title="{{ log.lost_property_entry_closed_time|date('Y-m-d H:i:s', "Europe/London") }}">
+                                                    {% endif %}
                                                     {{ log.lost_property_description[:12]|striptags ~ ' ...' }}
                                                     <br>
                                                     {% if log.lost_property_entry_closed_time is not null %}
-                                                        {{ log.lost_property_entry_closed_time|date('Y-m-d H:i:s', "Europe/London") }}
+                                                        Closed
+                                                    </div>                                                            
                                                     {% endif %}
                                                 {% endif %}
                                             </td> 
@@ -91,4 +109,11 @@
             {% include 'sidebar.twig' %}
         {% endblock %}
     {% endembed %}
+{% endblock %}
+{% block scripts %}
+    <script type="text/javascript">
+        $(function () {
+            $('[data-toggle="tooltip"]').tooltip();
+        });
+    </script>
 {% endblock %}
