Added Files and Information section

--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -68,3 +68,14 @@
             Event Control Register
         </div>
     </a>
+    <div class="row">
+        <br>
+    </div>
+    <div class="row">
+            <h4>Files & Information</h4>
+    </div>
+    <a href="{{ path('media', {'filename': "ECCoP", 'type': "pdf"}) }}"  target="_blank" class="btn btn-default btn-block" role="button">
+        <div class="row">
+            Code of Practice
+        </div>
+    </a>
