Added sign-out all button to register

--- a/app/Resources/views/fireRegister.html.twig
+++ b/app/Resources/views/fireRegister.html.twig
@@ -40,6 +40,11 @@
                                     {% endfor %}                           
                                 </tbody>
                             </table>
+                                    <div class="col-md-12">
+                                        <a href="{{ path('signout', {'id': 'all'}) }}" class="btn btn-warning btn-block">
+                                           Sign All Out
+                                        </a>
+                                    </div> 
                         {% endif %}  
                     </div>
                 </div>
