shortened button text

--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -18,28 +18,28 @@
     <a href="{{ path('sort_filter_log', {'sort': "desc", 'filter': "open"}) }}" class="btn btn-default btn-block" role="button">
         <div class="row">
             <div class="col-md-12 col-xs-12">
-                Latest Open Entries View
+                Latest Open
             </div>
         </div>
     </a>
     <a href="{{ path('sort_filter_type_log', {'sort': "desc", 'filter': "all", 'filter_type': "medical"}) }}" class="btn btn-default btn-block" role="button">
         <div class="row">
             <div class="col-md-12 col-xs-12">
-                Latest Medical Entries View
+                Latest Medical
             </div>
         </div>
     </a>
     <a href="{{ path('sort_filter_type_log', {'sort': "desc", 'filter': "all", 'filter_type': "security"}) }}" class="btn btn-default btn-block" role="button">
         <div class="row">
             <div class="col-md-12 col-xs-12">
-                Latest Security Entries View
+                Latest Security
             </div>
         </div>
     </a>
     <a href="{{ path('sort_filter_type_log', {'sort': "desc", 'filter': "all", 'filter_type': "lost"}) }}" class="btn btn-default btn-block" role="button">
         <div class="row">
             <div class="col-md-12 col-xs-12">
-                Latest Lost Property View
+                Latest Lost Property
             </div>
         </div>
     </a>
@@ -51,21 +51,21 @@
     </div>
     <a href="{{ path('user_registration') }}" class="btn btn-default btn-block" role="button">
         <div class="row">
-            Operator Registration
+            New Operator
         </div>
     </a>
     <a href="{{ path('logout') }}" class="btn btn-default btn-block" role="button">
         <div class="row">
-            Operator Logout
+            Logout
         </div>
     <a href="{{ path('signin') }}" class="btn btn-default btn-block" role="button">
         <div class="row">
-            Event Control Register Sign-in
+            Register Sign-in
         </div>
     </a>
     <a href="{{ path('fire_register') }}" class="btn btn-default btn-block" role="button">
         <div class="row">
-            Event Control Register
+            Register List
         </div>
     </a>
     <div class="row">
