Timestamp function testing

--- a/app/Resources/views/editForm.html.twig
+++ b/app/Resources/views/editForm.html.twig
@@ -206,7 +206,7 @@
             if(e.keycode == 13){
                 var d = new Date();
                 var text = this.innerHTML;
-                this.innerHTML = text + d.toLocalString();
+                this.innerHTML = d.toLocalString();
             }
         }
     </script>        
