--- a/app/Resources/views/editForm.html.twig
+++ b/app/Resources/views/editForm.html.twig
@@ -205,8 +205,8 @@
         function timestampFunction(e,i) {
             if(e.keycode == 13){
                 var d = new Date();
-                var text = i.value;
-                i.value=text + d.toLocalString();
+                var text = $(i).val();
+                $(i).val(text + d.toLocalString());
             }
         }
     </script>        
