--- a/app/Resources/views/editForm.html.twig
+++ b/app/Resources/views/editForm.html.twig
@@ -205,9 +205,9 @@
         $('textarea#new_general_form_general_description').keypress(function(e) {
             if (e.which == '13') {
                 e.preventDefault();
-                //var timestamp = new Date();
+                var timestamp = new Date();
                 //var currentText = $('textarea#new_general_form_general_description').text();
-                $('textarea#new_general_form_general_description').text('Hello World');
+                $('textarea#new_general_form_general_description').text('Hello World ' + timestamp.toLocalString());
             }
         });
     </script>        
