Modified General Timestamp text

--- a/app/Resources/views/editForm.html.twig
+++ b/app/Resources/views/editForm.html.twig
@@ -202,12 +202,12 @@
             $('#Lost').hide(100);
             $('#submit_button').show();
         });
-        $('textarea#new_general_form_general_description').keypress(function(e) {
+        $('textarea#new_general_form_general_description').live("keypress", function(e) {
             if (e.which == '13') {
                 e.preventDefault();
                 var timestamp = new Date();
                 var currentText = $('textarea#new_general_form_general_description').text();
-                $('textarea#new_general_form_general_description').text(currentText + "\n" + timestamp.toLocaleString());
+                $('textarea#new_general_form_general_description').text(currentText + "\n" + timestamp.toISOString() + " ");
             }
         });
     </script>        
