--- a/app/Resources/views/editForm.html.twig
+++ b/app/Resources/views/editForm.html.twig
@@ -155,8 +155,9 @@
                     if (e.which == '13') {
                         e.preventDefault();
                         var timestamp = new Date();
-                        var currentText = $('textarea#new_general_form_general_description').val();
-                        $('textarea#new_general_form_general_description').val(currentText + "\n[" + timestamp.toLocaleString('en-GB') + "] ");
+                        //var currentText = $('textarea#new_general_form_general_description').val();
+                        var currentText = $(this).val();
+                        $(this).val(currentText + "\n[" + timestamp.toLocaleString('en-GB') + "] ");
                     }
                 }
             });
