added class reference for timestamp

--- a/app/Resources/views/editForm.html.twig
+++ b/app/Resources/views/editForm.html.twig
@@ -150,7 +150,7 @@
             $('#Medical').hide();
             $('#Security').hide();
             $('#Lost').hide();
-            $('textarea#new_general_form_general_description').on({
+            $('.tsText').on({
                 keydown: function(e) {
                     if (e.which == '13') {
                         e.preventDefault();
