--- a/app/Resources/views/SummerBallBathSU.html.twig
+++ b/app/Resources/views/SummerBallBathSU.html.twig
@@ -40,4 +40,5 @@
     <script type="text/javascript" src="{{ asset('assets/vendor/moment/min/moment.min.js') }}"></script>
     <script type="text/javascript" src="{{ asset('assets/vendor/bootstrap/dist/js/bootstrap.min.js') }}"></script>
     <script type="text/javascript" src="{{ asset('assets/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js') }}"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/mousetrap/1.4.6/mousetrap.min.js"></script>
 {% endblock %}
