Change to prevent default on ctrl+s

--- a/app/Resources/views/editForm.html.twig
+++ b/app/Resources/views/editForm.html.twig
@@ -163,7 +163,7 @@
             });
             Mousetrap.bind('ctrl+s', function(e) {
                 e.preventDefault();
-                showSecurity;
+                showSecurity();
             });
         });
         $(function () {
