Removed Summer Ball References

--- a/app/Resources/views/SummerBallBathSU.html.twig
+++ b/app/Resources/views/SummerBallBathSU.html.twig
@@ -1,6 +1,6 @@
 {% extends 'CtrLogBase.html.twig' %}
 
-{% block title 'Summer Ball Event Control - Bath University Students Union' %}
+{% block title 'Event Control' %}
 
 {% block stylesheets %}
 <link rel="stylesheet" href="{{ asset('assets/vendor/bootstrap/dist/css/bootstrap.min.css') }}">
