Renamed twig files

--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -31,7 +31,7 @@
 
 {% block headertop %}
     <div class="wrapper">
-        <h1> Summer Ball 2016 Event Control</h1>
+        <h1> Event Control</h1>
     </div>
 {% endblock %}
 
