--- a/app/Resources/views/welcome.html.twig
+++ b/app/Resources/views/welcome.html.twig
@@ -1,4 +1,4 @@
-{% extends 'SummerBallBathSU.html.twig' %}
+{% extends 'BathSU.html.twig' %}
 {% block headerbottom %}
     <div class="container">
         <h2>Welcome!</h2>
