Removed more SB16 references

--- a/app/Resources/views/login.html.twig
+++ b/app/Resources/views/login.html.twig
@@ -1,6 +1,6 @@
 {# app/Resources/views/login.html.twig #}
 {# ... you will probably extends your base template, like base.html.twig #}
-{% extends 'SummerBallBathSU.html.twig' %}
+{% extends 'BathSU.html.twig' %}
 {% block headerbottom %}
     <h2>Control Room Login</h2>
 {% endblock %}
