--- a/app/Resources/views/fireRegister.html.twig
+++ b/app/Resources/views/fireRegister.html.twig
@@ -1,4 +1,4 @@
-{% extends 'SummerBallBathSU.html.twig' %}
+{% extends 'BathSU.html.twig' %}
 {% block headerbottom %}
 <h2>Event Control Fire Register</h2>
 {% endblock %}
